# VENGECS

./: .gitignore  CMakeLists.txt  README.md
assets/: bush.aseprite  platform.aseprite  sprite.aseprite
src/: a.out  main.cpp
src/Game/: Game.cpp  Game.h
src/Game/Scenes/: SceneOne.cpp  SceneOne.h
src/core/audio/: AudioManager.cpp  AudioManager.h
src/core/components/: Collider.cpp  Collider.h  Gravity.h  Input.h  Particle.h  ParticleSys.cpp  ParticleSys.h  Rigidbody.cpp  Rigidbody.h  Sprite.h  Transform.cpp  Transform.h
src/core/entity/: Entity.cpp  Entity.h
src/core/scenemanager/: Scene.h  SceneManager.cpp  SceneManager.h
src/core/system/: CollisionSystem.cpp  CollisionSystem.h  GravitySystem.h  InputSystem.h  MovementSystem.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleSystem.h  RenderSystem.h  SpriteAnimatorSystem.h
src/core/util/: Globals.cpp  Globals.h  TextureLoader.cpp  TextureLoader.h  sdl_init.cpp  sdl_init.h
